
2012-03-14  Cedric Bail

	* Fix a dead lock in Eina_File.

2012-03-16  Raphael Kubo da Costa

	* Adjust Valgrind's CFLAGS to fix the build when it is in a non-default location.

2012-03-29 Iván Briano

	* Avoid freeing old data before returning it on eina_hash_set().

2012-03-31  Vincent Torri

	* Add missing API eina_file_map_faulted() on Windows. Does nothing
	for now.

2012-04-19  Cedric Bail

	* Make it possible to force the number of detected CPU on a system.

2012-04-26 Carsten Haitzler (The Rasterman)

        1.2.0 release

2012-04-26  Cedric Bail

	* Add backtrace support Eina_Log.

2012-04-30  Jérôme Pinot

	* Add missing files in the tarballs.

2012-05-06  Cedric Bail

	* Fix a rounding issue near 1.0 for eina_f32p32_cos and eina_f32p32_sin.

2012-05-08  Cedric Bail

	* Add eina_file_map_lines to iterate on lines of a mapped file.

2012-05-17  Albin Tonnerre

	* Fix portability issue of Eina_Value on ARM and PPC.
	* Fix portability issue of Eina_Value test on Itanium.

2012-05-23  Carsten Haitzler (The Rasterman)

        * Fix global_faulty faulty flag in eina_file to be set to 0
        initially rather than be random memory garbage.

2012-05-29  Vincent Torri

        * remove --disable-posix-threads and --disable-win32-threads
	from configure options, and detect automatically the threading
	support.
	Fix bug in the XML parser when a tag was in a comment or a
	cdata

2012-06-08  Mike Blumenkrantz

        * Fixed eina_str_split_full() to behave properly and be much faster

2012-06-17  Carsten Haitzler (The Rasterman)

        * Add env var EINA_MEMPOOL_PASS to force mempool to try use
        passthrough to malloc for debgging purposes and memory footrpint
        comparisons at runtime.

2012-07-01  Vincent Torri

        * Remove --enable-coverage from configure options,

2012-07-04  Vincent Torri

        * Implement eina_file_map_lines() on Windows.

2012-07-05  Raphael Kubo da Costa

	* Handle NULL in all eina_*_free function.